<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/attendancetext"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        app:layout_goneMarginStart="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        android:textColor="#000807"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/markbold"
        android:text="Attendance" />
    <TextView
        android:id="@+id/text8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attendancetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textColor="#999C9B"
        android:fontFamily="@font/markregular"
        android:text="Select a day to continue" />
    <HorizontalScrollView
        android:id="@+id/scrollcards"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text8"
        android:scrollbars="none"
        android:overScrollMode="never"
        android:layout_marginTop="56dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RelativeLayout
            android:id="@+id/gotodayone"
            android:background="@drawable/borderradius"
            android:layout_marginStart="16dp"
            android:backgroundTint="#F7EBFF"
            android:paddingTop="24dp"
            android:paddingStart="16dp"
            android:paddingEnd="24dp"
            android:paddingBottom="24dp"
            android:layout_width="312dp"
            android:layout_height="352dp">
        <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/cardoneicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dayone"/>
            <TextView
                android:id="@+id/text9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardoneicon"
                android:layout_marginTop="16dp"
                android:textSize="13dp"
                android:fontFamily="@font/markregular"
                android:text="October 15th"
                android:textColor="#9A00FF"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text9"
                android:textSize="16dp"
                android:fontFamily="@font/markmedium"
                android:text="@string/day_one"
                android:textColor="#000807"
                android:layout_marginTop="216dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_purpleone"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/gotodaytwo"
            android:background="@drawable/borderradius"
            android:layout_marginStart="16dp"
            android:backgroundTint="#FFF4D6"
            android:paddingTop="24dp"
            android:paddingStart="16dp"
            android:paddingEnd="24dp"
            android:paddingBottom="24dp"
            android:layout_width="312dp"
            android:layout_height="352dp">
            <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/cardtwoicon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_daytwo"/>
            <TextView
                android:id="@+id/text10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardtwoicon"
                android:layout_marginTop="16dp"
                android:textSize="13dp"
                android:fontFamily="@font/markregular"
                android:text="October 16th"
                android:textColor="#FFBB00"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text10"
                android:textSize="16dp"
                android:fontFamily="@font/markmedium"
                android:text="@string/day_two"
                android:textColor="#000807"
                android:layout_marginTop="216dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_orangetwo"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/gotodaythree"
            android:background="@drawable/borderradius"
            android:layout_marginStart="16dp"
            android:backgroundTint="#FFEBEB"
            android:paddingTop="24dp"
            android:paddingStart="16dp"
            android:paddingEnd="24dp"
            android:paddingBottom="24dp"
            android:layout_width="312dp"
            android:layout_height="352dp">
            <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/cardthreeicon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_daythree"/>
            <TextView
                android:id="@+id/text11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardthreeicon"
                android:layout_marginTop="16dp"
                android:textSize="13dp"
                android:fontFamily="@font/markregular"
                android:text="October 17th"
                android:textColor="#FF3131"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text11"
                android:textSize="16dp"
                android:fontFamily="@font/markmedium"
                android:text="@string/day_three"
                android:textColor="#000807"
                android:layout_marginTop="216dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_redthree"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/gotodayfour"
            android:background="@drawable/borderradius"
            android:layout_marginStart="16dp"
            android:backgroundTint="#EBF6FF"
            android:paddingTop="24dp"
            android:paddingStart="16dp"
            android:paddingEnd="24dp"
            android:paddingBottom="24dp"
            android:layout_width="312dp"
            android:layout_height="352dp">
            <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/cardfouricon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dayfour"/>
            <TextView
                android:id="@+id/text12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardfouricon"
                android:layout_marginTop="16dp"
                android:textSize="13dp"
                android:fontFamily="@font/markregular"
                android:text="October 18th"
                android:textColor="#0090FF"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text12"
                android:textSize="16dp"
                android:fontFamily="@font/markmedium"
                android:text="@string/day_four"
                android:textColor="#000807"
                android:layout_marginTop="216dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_bluefour"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="16dp"
            android:background="#FFF"
            android:layout_height="216dp"/>
    </LinearLayout>
    </HorizontalScrollView>
    <ImageView
        android:id="@+id/swiper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_swipe"
        app:layout_constraintTop_toBottomOf="@id/scrollcards"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/stableizer"
        />
    <RelativeLayout
        android:id="@+id/stableizer"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>