<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/gifttext"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        app:layout_goneMarginStart="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        android:textColor="#000807"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/markbold"
        android:text="Giftbags" />
    <TextView
        android:id="@+id/text14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gifttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textColor="#999C9B"
        android:fontFamily="@font/markregular"
        android:text="Select a day to continue" />
    <HorizontalScrollView
        android:id="@+id/scrollcards"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text14"
        android:scrollbars="none"
        android:overScrollMode="never"
        android:layout_marginTop="56dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:background="@drawable/borderradius"
                android:layout_marginStart="16dp"
                android:backgroundTint="#FDEEE0"
                android:paddingTop="24dp"
                android:paddingStart="16dp"
                android:paddingEnd="24dp"
                android:paddingBottom="24dp"
                android:layout_width="312dp"
                android:layout_height="352dp">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:id="@+id/giftcardoneicon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_dayonegift"/>
                <TextView
                    android:id="@+id/text15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/giftcardoneicon"
                    android:layout_marginTop="16dp"
                    android:textSize="13dp"
                    android:fontFamily="@font/markregular"
                    android:text="October 15th"
                    android:textColor="#EF7100"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text15"
                    android:textSize="16dp"
                    android:fontFamily="@font/markmedium"
                    android:text="@string/day_one"
                    android:textColor="#000807"
                    android:layout_marginTop="216dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/ic_brownone"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:background="@drawable/borderradius"
                android:layout_marginStart="16dp"
                android:backgroundTint="#E1EDFF"
                android:paddingTop="24dp"
                android:paddingStart="16dp"
                android:paddingEnd="24dp"
                android:paddingBottom="24dp"
                android:layout_width="312dp"
                android:layout_height="352dp">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:id="@+id/giftcardtwoicon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_daytwogift"/>
                <TextView
                    android:id="@+id/text16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/giftcardtwoicon"
                    android:layout_marginTop="16dp"
                    android:textSize="13dp"
                    android:fontFamily="@font/markregular"
                    android:text="October 16th"
                    android:textColor="#4D94FF"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text16"
                    android:textSize="16dp"
                    android:fontFamily="@font/markmedium"
                    android:text="@string/day_two"
                    android:textColor="#000807"
                    android:layout_marginTop="216dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/ic_bluetwo"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:background="@drawable/borderradius"
                android:layout_marginStart="16dp"
                android:backgroundTint="#F7EBFF"
                android:paddingTop="24dp"
                android:paddingStart="16dp"
                android:paddingEnd="24dp"
                android:paddingBottom="24dp"
                android:layout_width="312dp"
                android:layout_height="352dp">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:id="@+id/giftcardthreeicon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_daythreegift"/>
                <TextView
                    android:id="@+id/text17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/giftcardthreeicon"
                    android:layout_marginTop="16dp"
                    android:textSize="13dp"
                    android:fontFamily="@font/markregular"
                    android:text="October 17th"
                    android:textColor="#9A00FF"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text17"
                    android:textSize="16dp"
                    android:fontFamily="@font/markmedium"
                    android:text="@string/day_three"
                    android:textColor="#000807"
                    android:layout_marginTop="216dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/ic_purplethree"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:background="@drawable/borderradius"
                android:layout_marginStart="16dp"
                android:backgroundTint="#DEFFDF"
                android:paddingTop="24dp"
                android:paddingStart="16dp"
                android:paddingEnd="24dp"
                android:paddingBottom="24dp"
                android:layout_width="312dp"
                android:layout_height="352dp">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:id="@+id/giftcardfouricon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_dayfourgift"/>
                <TextView
                    android:id="@+id/text18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/giftcardfouricon"
                    android:layout_marginTop="16dp"
                    android:textSize="13dp"
                    android:fontFamily="@font/markregular"
                    android:text="October 18th"
                    android:textColor="#71C81A"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text18"
                    android:textSize="16dp"
                    android:fontFamily="@font/markmedium"
                    android:text="@string/day_four"
                    android:textColor="#000807"
                    android:layout_marginTop="216dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/ic_greenfour"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="16dp"
                android:background="#FFF"
                android:layout_height="216dp"/>
        </LinearLayout>
    </HorizontalScrollView>
    <ImageView
        android:id="@+id/swiper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_swipe"
        app:layout_constraintTop_toBottomOf="@id/scrollcards"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/stableizer"
        />
    <RelativeLayout
        android:id="@+id/stableizer"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>